<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.shantanutest.ui.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        tools:context=".ui.login.LoginFragment">

        <TextView
            android:id="@+id/s_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:textSize="24sp"
            android:textColor="#F3E84314" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/s_tv"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:textSize="20sp"
            android:text="@string/title" />

        <TextView
            android:id="@+id/pan_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_below="@id/title_tv"
            android:textSize="@dimen/_12sp"
            android:layout_marginBottom="@dimen/_5dp"
            android:text="@string/pan_number" />

        <EditText
            android:id="@+id/et_pan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16dp"
            android:text="@={viewModel.panNumber}"
            android:textSize="@dimen/_16sp"
            android:maxLength="10"

            android:layout_below="@id/pan_tv"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:background="@drawable/edit_text_border"
            android:hint="@string/enter_pan_number" />

        <TextView
            android:id="@+id/birthdate_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="BIRTHDATE"
            android:layout_below="@+id/et_pan"
            android:layout_marginBottom="@dimen/_5dp"
            android:textSize="@dimen/_12sp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/birthdate_tv"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_date"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16dp"
                android:maxLength="2"
                android:textSize="@dimen/_16sp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_10dp"
                android:background="@drawable/edit_text_border"
                android:hint="00"
                android:layout_marginTop="@dimen/_5dp"
                android:text="@={viewModel.birthDateDay}"
                android:gravity="center" />

            <EditText
                android:id="@+id/et_month"
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16dp"
                android:textSize="@dimen/_16sp"
                android:maxLength="2"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginTop="@dimen/_5dp"
                android:background="@drawable/edit_text_border"
                android:hint="00"
                android:text="@={viewModel.birthDateMonth}"
                android:gravity="center" />

            <EditText
                android:id="@+id/et_year"
                android:layout_width="0dp"
                android:layout_weight="0.50"
                android:layout_height="wrap_content"
                android:padding="@dimen/_16dp"
                android:textSize="@dimen/_16sp"
                android:maxLength="4"
                android:text="@={viewModel.birthDateYear}"
                android:layout_marginTop="@dimen/_5dp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:background="@drawable/edit_text_border"
                android:hint="0000"
                android:gravity="center" />

        </LinearLayout>


        <TextView
            android:layout_above="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pan_confirmation"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/_12sp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/border_color"
            android:textColor="@color/white"
            android:enabled="@{viewModel.isButtonEnabled}"
            android:background="@drawable/button_bg"
            android:layout_above="@id/do_not_have_pan_tv"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginStart="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_20dp"
            android:layout_marginBottom="@dimen/_5dp"
            android:text="@string/next" />

        <TextView
            android:id="@+id/do_not_have_pan_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I do not have a PAN"
            android:textColor="@color/border_color"
            android:layout_marginTop="@dimen/_5dp"
            android:textSize="@dimen/_12sp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_20dp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_20dp" />

    </RelativeLayout>
</layout>